<resources>
    <string name="app_name">My Application</string>
    <string name="caculator">计算器</string>
    <string name="register">注册账号</string>
    <string name="login">登陆</string>
    <string name="main">主界面</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="showpassword">显示密码</string>
    <string name="hintusername">请输入用户名</string>
    <string name="hintpassword">请输入密码</string>
    <string name="hintsurepassword">请再次输入密码</string>

    <string name="backbt">&#60;-</string>
</resources>
