<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:padding="15dp"
        android:background="#00A8E8">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/login_pic1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:src="@drawable/calculator"
                />

            <ImageView
                android:id="@+id/login_pic2"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:src="@drawable/login_pic2"
                android:layout_below="@id/login_pic1"
                android:layout_alignStart="@id/login_pic1"
                android:layout_alignLeft="@+id/login_pic1"
                android:layout_alignTop="@id/login_username"
                android:layout_alignBottom="@id/login_username"
                />

            <ImageView
            android:id="@+id/login_pic3"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:src="@drawable/login_pic3"
            android:layout_below="@id/login_pic2"
            android:layout_toLeftOf="@id/login_password"
            android:layout_alignRight="@id/login_pic2"
            android:layout_alignTop="@id/login_password"
            android:layout_alignBottom="@id/login_password"
            />
            <ImageView
                android:id="@+id/login_pic4"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:src="@drawable/login_pic3"
                android:layout_below="@id/login_pic3"
                android:layout_toLeftOf="@id/login_surepassword"
                android:layout_alignRight="@id/login_pic3"
                android:layout_alignTop="@id/login_surepassword"
                android:layout_alignBottom="@id/login_surepassword"
                />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_pic1"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/login_pic2"
                android:hint="@string/hintusername"
                android:lines="1"
                android:inputType="text"/>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_username"
                android:layout_toRightOf="@id/login_pic2"
                android:hint="@string/hintpassword"
                android:inputType="textPassword"
                android:lines="1"/>
            <EditText
                android:id="@+id/login_surepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_password"
                android:layout_toRightOf="@id/login_pic2"
                android:hint="@string/hintsurepassword"
                android:inputType="textPassword"
                android:lines="1"/>

            <Button
                android:id="@+id/login_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_surepassword"
                android:background="#FFFF00"
                android:text="@string/register"
                android:textSize="17dp" />
        </RelativeLayout>
</RelativeLayout>